--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,10 @@
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "react-swipeable-views": "^0.14.0",
     "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
